app-config/kafka-console-dex/Service_kafka-console-dex.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-dex
spec:
  type: ClusterIP
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: http
  selector:
    app: console-dex
